--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>Untitled Document</title>
+	
+	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css"/>
+	
 </head>
 
 <body>
@@ -19,5 +22,8 @@
 }</script>
 	
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	
+	<script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+<script type='text/javascript' src='script.js'></script>
 </body>
 </html>
