--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -24,6 +24,6 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	
 	<script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-<script type='text/javascript' src='script.js'></script>
+<!--<script type='text/javascript' src='script.js'></script>-->
 </body>
 </html>
